# encoding-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  aliases.js  crates.js  search-index.js  settings.html  source-files.js
.circleci/: config.yml
.github/workflows/: build-dev.yml  build.yml  doc.yml  rust.yml
ascii85/: all.html  fn.decode.html  fn.encode.html  fn.max_encoded_len.html  fn.new_decoder.html  fn.new_encoder.html  index.html  sidebar-items.js  struct.CorruptInputError.html
ascii85/decoder/: fn.new_decoder.html
ascii85/encoder/: fn.new_encoder.html
ascii85/encoding/: fn.decode.html  fn.encode.html  fn.max_encoded_len.html
ascii85/errors/: struct.CorruptInputError.html
base32/: all.html  fn.new_decoder.html  fn.new_encoder.html  index.html  sidebar-items.js  struct.CorruptInputError.html  struct.Encoding.html  struct.HEX_ENCODING.html  struct.STD_ENCODING.html
base32/decoder/: fn.new_decoder.html
base32/encoder/: fn.new_encoder.html
base32/encoding/: struct.Encoding.html  struct.HEX_ENCODING.html  struct.STD_ENCODING.html
base32/errors/: struct.CorruptInputError.html
base64/: all.html  constant.STD_PADDING.html  fn.new_decoder.html  fn.new_encoder.html  index.html  sidebar-items.js  struct.CorruptInputError.html  struct.Encoding.html  struct.RAW_STD_ENCODING.html  struct.RAW_URL_ENCODING.html  struct.STD_ENCODING.html  struct.URL_ENCODING.html
base64/constants/: constant.STD_PADDING.html
base64/decoder/: fn.new_decoder.html
base64/encoder/: fn.new_encoder.html
base64/encoding/: struct.Encoding.html  (+4 more)
benches/: base32.rs  hex.rs
binary/: all.html  constant.MAX_VARINT_LEN16.html  constant.MAX_VARINT_LEN32.html  constant.MAX_VARINT_LEN64.html  enum.Error.html  fn.put_uvarint.html  fn.put_varint.html  fn.read_uvarint.html  fn.read_varint.html  fn.uvariant.html  fn.variant.html  index.html  sidebar-items.js  struct.BigEndian.html  struct.LittleEndian.html  trait.ByteOrder.html
builtin/: all.html  fn.copy.html  index.html  sidebar-items.js
crates/base32/: Cargo.toml
crates/base32/benches/: base32.rs
crates/base32/examples/: encoder.rs  encoding_decode.rs  encoding_decode_string.rs  encoding_encode.rs  encoding_encode_to_string.rs
crates/base32/src/: constants.rs  encoder.rs  encoding.rs  errors.rs  lib.rs
crates/base32/src/decoder/: filter.rs  mod.rs  tests.rs
crates/base32/src/encoding/: mod.rs  tests.rs
crates/base32/src/tests/: mod.rs
crates/base32/tests/: base32.rs  decode.rs  decoder.rs  encode.rs  encoder.rs
crates/base32/tests/testbot/: mod.rs
crates/hex/: Cargo.toml
crates/hex/benches/: hex.rs
crates/hex/examples/: decode.rs  decode_string.rs  dump.rs  dumper.rs  encode.rs  encode_to_string.rs
crates/hex/src/: constants.rs  decoder.rs  encoder.rs  errors.rs  hex.rs  lib.rs
crates/hex/src/dumper/: mod.rs
crates/hex/tests/: hex.rs
csv/: all.html  enum.ReadError.html  enum.WriteError.html  fn.new_reader.html  fn.new_writer.html  index.html  sidebar-items.js  struct.ParseError.html  struct.Reader.html  struct.Writer.html
encoding/: all.html  enum.Error.html  index.html  sidebar-items.js
examples/: base32_decode.rs  base32_encoder.rs  base32_encoding_encode.rs  base32_encoding_encode_to_string.rs  base64.rs
hex/: all.html  enum.Error.html  fn.decode.html  fn.decode_string.html  fn.decoded_len.html  fn.dump.html  fn.dumper.html  fn.encode.html  fn.encode_to_string.html  fn.encoded_len.html  fn.new_decoder.html  fn.new_encoder.html  index.html  sidebar-items.js
pem/: all.html  enum.Error.html  fn.decode.html  fn.encode.html  fn.encode_to_memory.html  index.html  sidebar-items.js  struct.Block.html
src/: errors.rs  lib.rs
tests/: hex.rs
(+304 files in other folders)
