[package]
name = "encoding"
version = "0.4.0"
authors = ["sammyne <xiangminli@alumni.sjtu.edu.cn>"]
edition = "2021"
exclude = ["doc-preview.sh"]
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
binary.workspace = true
builtin.workspace = true
csv.workspace = true
hex.workspace = true
lazy_static = "1.4.0"
thiserror   = "1.0.16"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "base32"
harness = false

[[bench]]
name = "hex"
harness = false

[workspace]
members = [
  "crates/base64",
  "crates/binary",
  "crates/builtin",
  "crates/csv",
  "crates/hex",
]

[workspace.dependencies]
base64.path = "crates/base64"
binary.path = "crates/binary"
builtin.path = "crates/builtin"
csv.path = "crates/csv"
hex.path = "crates/hex"
lazy_static = "1.4.0"
thiserror   = "1.0.16"
