[package]
name = "hex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "hex"
harness = false

[dependencies]
lazy_static.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.3"
